# OmniBorder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.rc
.github/workflows/: build-windows.yml
languages/: en.ini  es.ini
src/: app.cpp  config_manager.cpp  config_manager.h  hotkey_manager.cpp  hotkey_manager.h  language_manager.cpp  language_manager.h  logger.cpp  logger.h  main.cpp  main.h  main_ui.cpp  monitor_manager.cpp  monitor_manager.h  tray_icon.cpp  tray_icon.h  types.h  window_manager.cpp  window_manager.h
